Payment gateway integrated. Coupon management completed

--- a/glamyze/templates/my_admin/base.html
+++ b/glamyze/templates/my_admin/base.html
@@ -82,7 +82,7 @@
                 </a>
             </li>
             <li class="sidebar-item">
-                <a class="sidebar-link" href="/hello" aria-expanded="false">
+                <a class="sidebar-link" href="{% url 'promotion_management:coupon_view' %}" aria-expanded="false">
                     <span><i class="ti ti-ticket"></i></span>
                     <span class="hide-menu">Coupons</span>
                 </a>
