wallet completed. cancelled productws amount is updated to wallet

--- a/glamyze/templates/my_admin/base.html
+++ b/glamyze/templates/my_admin/base.html
@@ -99,6 +99,13 @@
                     <span class="hide-menu">Offers</span>
                 </a>
             </li>
+            <li class="sidebar-item">
+              <a class="sidebar-link" href="{% url 'sales_report:sales_view' %}" aria-expanded="false">
+                  <span><i class="ti ti-chart-bar"></i></span>
+                  <span class="hide-menu">Sales Report</span>
+              </a>
+          </li>
+          
           </ul>
         </nav>
         <!-- End Sidebar navigation -->
