--- a/glamyze/templates/user/blank_layout.html
+++ b/glamyze/templates/user/blank_layout.html
@@ -101,7 +101,7 @@
 							<a style="color: black;" href="{% url 'cart_app:cart_view' %}"><i class="zmdi zmdi-shopping-cart"></i></a>
 						</div>
 
-						<a href="#" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti" data-notify="0">
+						<a href="{% url 'wishlist_app:wishlist_view' %}" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti" data-notify="0">
 							<i class="zmdi zmdi-favorite-outline"></i>
 						</a>
 						<a href="{% url 'address_app:account_management' %}" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11">
